src/components/workspace/WorkSpace/WorkSpace.module.scss
.root {
  display: flex;
  height: 100vh;
  overflow: hidden;
  .sidebar {
    flex: 0 0 70px;
    width: 70px;
  }
  .tree {
    padding-top: 0.5rem;
    flex: 0 0 250px;
    width: 250px;
    background-color: #393939;
    overflow-y: auto !important;
    overflow-x: hidden;
    div[class*='ant-spin-nested-loading'] {
      height: 4rem;
    }
  }
  .workArea {
    width: 100%;
  }
  .globalAction {
    display: flex;
    justify-content: space-between;
    padding: 0.5rem;
    padding-left: 0.7rem;
    font-size: 0.8rem;
    border-bottom: 1px solid var(--black-500);
    align-items: center;
    font-weight: 800;
    margin-bottom: 0.8rem;

    svg {
      font-size: 1.2rem;
    }
    .visible {
      opacity: 1;
      pointer-events: all;
      display: flex;
      justify-content: flex-end;
    }
  }
  .testCaseArea {
    padding: 1rem;
  }
  .tabsWrapper {
    display: flex;
    align-items: center;
  }
}

